[package]
name = "verifiable"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
derive-where = "1.2"
bounded-collections = { version = "0.1.8", default-features = false }
parity-scale-codec = { version = "3.6.1", default-features = false, features = ["derive","max-encoded-len"] }
scale-info = { version = "2.7.0", default-features = false, features = ["derive"] }
schnorrkel = { version = "0.10.2", default-features = false, features = ["u64_backend"] }
ark-serialize = { version = "0.4", default-features = false, features = ["derive"] }
ark-scale = { version = "0.0.12", default-features = false }
bandersnatch_vrfs = { git = "https://github.com/w3f/ring-vrf.git", branch = "real-srs", default-features = false}
getrandom = { version = "0.2.11", features = ["js"] }
wasm-bindgen = "0.2.89"
js-sys = "0.3.66"
wasm-bindgen-test = "0.3.39"

[dev-dependencies]
rand_core = "0.6"

[features]
default = [ "std" ]
std = [
  "bounded-collections/std",
  "parity-scale-codec/std",
  "scale-info/std",
  "schnorrkel/std",
  "ark-serialize/std",
  "ark-scale/std",
  "bandersnatch_vrfs/std",
]
# Small (2^9) zcash params (defaults to 2^16)
# Mostly useful for testing
small-ring = []


[profile.test]
opt-level = 3               # Use slightly better optimizations.

[profile.release]
lto = true
